--- a/.github/workflows/sql-review.yml
+++ b/.github/workflows/sql-review.yml
@@ -10,12 +10,12 @@ on:
 jobs:
   check-release-on-test:
     permissions:
-        pull-requests: write # write permission required to allow the action writes the check results to the comment.
+      pull-requests: write # write permission required to allow the action writes the check results to the comment.
     runs-on: ubuntu-latest # use self-hosted machines if your Bytebase runs in internal networks.
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # set GITHUB_TOKEN because the 'Check release' step needs it to comment the pull request with check results.
-      BYTEBASE_URL: https://demo.bytebase.com
-      BYTEBASE_SERVICE_ACCOUNT: ci@service.bytebase.com
+      BYTEBASE_URL: https://verified-especially-cattle.ngrok-free.app
+      BYTEBASE_SERVICE_ACCOUNT: api-example@service.bytebase.com
       BYTEBASE_PROJECT: "projects/project-sample"
       BYTEBASE_TARGETS: "instances/test-sample-instance/databases/hr_test"
       FILE_PATTERN: "migrations/*.sql"
@@ -42,7 +42,7 @@ jobs:
           validate-only: true
   check-release-on-prod:
     permissions:
-        pull-requests: write # write permission required to allow the action writes the check results to the comment.
+      pull-requests: write # write permission required to allow the action writes the check results to the comment.
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # set GITHUB_TOKEN because the 'Check release' step needs it to comment the pull request with check results.
