--- a/.github/workflows/sql-review.yml
+++ b/.github/workflows/sql-review.yml
@@ -15,7 +15,7 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # set GITHUB_TOKEN because the 'Check release' step needs it to comment the pull request with check results.
       BYTEBASE_URL: https://verified-especially-cattle.ngrok-free.app
-      BYTEBASE_SERVICE_ACCOUNT: api-example@service.bytebase.com
+      BYTEBASE_SERVICE_ACCOUNT: api-sample@service.bytebase.com
       BYTEBASE_PROJECT: "projects/project-sample"
       BYTEBASE_TARGETS: "instances/test-sample-instance/databases/hr_test"
       FILE_PATTERN: "migrations/*.sql"
@@ -46,8 +46,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # set GITHUB_TOKEN because the 'Check release' step needs it to comment the pull request with check results.
-      BYTEBASE_URL: https://demo.bytebase.com
-      BYTEBASE_SERVICE_ACCOUNT: ci@service.bytebase.com
+      BYTEBASE_URL: https://verified-especially-cattle.ngrok-free.app
+      BYTEBASE_SERVICE_ACCOUNT: api-sample@service.bytebase.com
       BYTEBASE_PROJECT: "projects/project-sample"
       BYTEBASE_TARGETS: "instances/prod-sample-instance/databases/hr_prod"
       FILE_PATTERN: "migrations/*.sql"
