--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
     environment: test
     env:
       BYTEBASE_URL: https://verified-especially-cattle.ngrok-free.app
-      BYTEBASE_SERVICE_ACCOUNT: api-example@service.bytebase.com
+      BYTEBASE_SERVICE_ACCOUNT: api-sample@service.bytebase.com
       BYTEBASE_PROJECT: "projects/project-sample"
       # The Bytebase rollout pipeline will deploy to 'test' and 'prod' environments.
       # 'deploy-to-test' job rollouts the 'test' stage and 'deploy-to-prod' job rollouts the 'prod' stage.
